--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <% include ../partials/bar-left %>
+    <% include ../partials/side-bar %>
 
     <section class="page">
       <nav>
@@ -16,7 +16,6 @@
         <% include ../partials/time-component %>
 
         <% include ../partials/announcement-component %>
-
 
 
       </section>
