--- a/views/partials/time-component.ejs
+++ b/views/partials/time-component.ejs
@@ -4,8 +4,8 @@
             <img class="bothC__relative" src="/img/icons/time.svg"/>
         </div>
         <div class="component__right">
-            <h4 class="component__time__right__title">Time left:</h4>
-            <h1 class="component__time__right__time">24:00:00</h1>
+            <h4 class="component__time__title">Time left:</h4>
+            <h1 class="component__time__time">24:00:00</h1>
         </div>
     </div>
 </div>
