--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,6 +17,12 @@
 
         <% include ../partials/announcement-component %>
 
+        <% include ../partials/workshops-component %>
+
+        <% include ../partials/timeline-component %>
+
+
+
 
       </section>
     </section>
