--- a/views/partials/announcement-component.ejs
+++ b/views/partials/announcement-component.ejs
@@ -1,7 +1,10 @@
 <div class="component component__announcement">
     <div class="component__flex">
         <div class="component__left">
-            <img class="bothC__relative" src="/img/icons/announcement.svg"/>
+            <div class="vertC__relative">
+                <img src="/img/icons/announcement.svg"/>
+                <h4>Announcements</h4>
+            </div>
         </div>
         <div class="component__right component__announcement__right">
 
