--- a/scss/modules/_bar-left.scss
+++ b/scss/modules/_bar-left.scss
@@ -1,5 +1,20 @@
-.bar-left{
-  width: 70px;
+.side-bar{
+  width: 80px;
   height: 100%;
-  background-color: red;
+  background-color: $headerGrey;
+  border-right: 2px solid $greyBorder;
+  &__active > &__item{
+    background-color: $blue;
+  }
+  &__item:hover{
+    background-color: $lightBlue;
+  }
+  &__item{
+    transition: all 0.3s ease;
+    position: relative;
+    height: 80px;
+    img{
+      width: 50%;
+    }
+  }
 }
