--- a/scss/modules/_component.scss
+++ b/scss/modules/_component.scss
@@ -1,14 +1,20 @@
 .component{
   box-shadow: $greyBorder 0px 2px 4px;
   overflow: hidden;
-  width: 90%;
-  height: 100px;
+  width: 100%;
   box-sizing: border-box;
   margin: 20px auto;
+  border: 1px solid $greyBorder;
 
   &__left{
     width: 20%;
     background-color: $headerGrey;
+    text-align: center;
+    h4{
+      padding: 10px 0px;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
     img{
       width: 50px;
       height: 50px;
@@ -24,6 +30,29 @@
   &__flex{
     display: flex;
     height: 100%;
+  }
+
+  &__one-third{
+    width: 30%;
+    display: inline-block;
+    margin: 0px;
+  }
+
+  &__two-third{
+    width: 67%;
+    display: inline-block;
+    margin: 0px;
+  }
+
+
+  &__header{
+    text-align: center;
+    background-color: $headerGrey;
+    h3{
+      padding: 10px 0px;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
   }
 
   &__time{
@@ -53,7 +82,9 @@
             vertical-align: middle;
           }
           h4{
-            font-weight: bold;
+            font-weight: 600;
+            color: $darkGrey;
+            opacity: 0.8;
           }
           h5{
             font-weight: bold;
@@ -73,4 +104,33 @@
     }
   }
 
+  &__workshops{
+    &__item{
+      padding: 20px 15px;
+      img{
+        width: 40px;
+        height: 40px;
+        border-radius: 360px;
+        display: inline-block;
+        vertical-align: middle;
+      }
+      &__info{
+        display: inline-block;
+        width: 40%;
+        vertical-align: middle;
+        margin-left: 10px;
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 1030px){
+  .component{
+    &__left{
+      h4{
+        display: none !important;
+      }
+    }
+  }
 }
