--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -1,3 +1,27 @@
-<div class="bar-left">
-
+<div class="side-bar">
+    <a href="/" <% if(pageName === 'index') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img class="bothC__relative" src="/img/icons/home.svg"/>
+        </div>
+    </a>
+    <a href="/" <% if(pageName === 'events') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img class="bothC__relative" src="/img/icons/events.svg"/>
+        </div>
+    </a>
+    <a href="/" <% if(pageName === 'social') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img class="bothC__relative" src="/img/icons/social.svg"/>
+        </div>
+    </a>
+    <a href="/" <% if(pageName === 'challenges') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img class="bothC__relative" src="/img/icons/challenges.svg"/>
+        </div>
+    </a>
+    <a href="/">
+        <div class="side-bar__item" <% if(pageName === 'login') { %> class="side-bar__active" <% } %>>
+            <img class="side-bar__item__lock bothC__relative" src="/img/icons/login.svg"/>
+        </div>
+    </a>
 </div>
