--- a/views/partials/time-component.ejs
+++ b/views/partials/time-component.ejs
@@ -1,7 +1,7 @@
 <div class="component component__time">
     <div class="component__flex">
         <div class="component__left">
-            <img class="bothC__relative" src="/img/icons/time.svg"/>
+            <img class="vertC__relative" src="/img/icons/time.svg"/>
         </div>
         <div class="component__right">
             <h4 class="component__time__title">Time left:</h4>
