--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,46 +14,33 @@
       </nav>
       <section id="main">
 
-        <!--<% include ../partials/time-component %>-->
         <!-- Vue Time Component-->
-        <div id="time">
+        <div id="time" class="component-container">
           <countdown v-bind:time="timeLeft"></countdown>
         </div>
 
 
-        <!--<% include ../partials/announcement-component %>-->
-
-
-        <div id="announcements">
-
+        <div id="announcements" class="component-container">
           <announcements>
             <div v-for="item in test">
               <announcement-item :title="item.title" :body="item.body" :date="item.date"></announcement-item>
             </div>
           </announcements>
-
-          <!--<div class="component component__announcement">-->
-            <!--<div class="component__flex">-->
-              <!--<div class="component__left">-->
-                <!--<div class="vertC__relative">-->
-                  <!--<img src="/img/icons/announcement.svg"/>-->
-                  <!--<h4>Announcements</h4>-->
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="component__right component__announcement__right">-->
-
-                <!--<div v-for="item in test">-->
-                    <!--<announcement-item :title="item.title" :body="item.body" :date="item.date"></announcement-item>-->
-                <!--</div>-->
-
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
         </div>
 
-        <% include ../partials/workshops-component %>
 
-        <% include ../partials/timeline-component %>
+        <div id="workshops" class="component-container component-container__one-third">
+          <workshops id="workshops">
+            <div v-for="item in workshops">
+              <workshop-item :title="item.title" :room="item.location" :image="item.img" :time="item.time"></workshop-item>
+            </div>
+          </workshops>
+        </div>
+
+
+        <div id="timeline" class="component-container component-container__two-third component-container__right">
+          <timeline></timeline>
+        </div>
 
 
 
