--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -193,7 +193,6 @@ hr {
   overflow: hidden;
   width: 100%;
   box-sizing: border-box;
-  margin: 20px auto;
   border: 1px solid #E2E2E2; }
   .component__left {
     width: 20%;
@@ -243,6 +242,8 @@ hr {
       padding: 0px;
       overflow-x: scroll;
       height: inherit; }
+      .component__announcement__right > div:first-child h5 {
+        display: inline-block !important; }
       .component__announcement__right__item {
         border-bottom: 1px solid #E2E2E2;
         padding: 8px; }
@@ -259,21 +260,43 @@ hr {
           padding: 0px 3px; }
       .component__announcement__right__item:nth-last-child(1) {
         border-bottom: 0px; }
-      .component__announcement__right__item:first-child h5 {
-        display: inline-block !important; }
-  .component__workshops__item {
-    padding: 20px 15px; }
-    .component__workshops__item img {
-      width: 40px;
-      height: 40px;
-      border-radius: 360px;
-      display: inline-block;
-      vertical-align: middle; }
-    .component__workshops__item__info {
-      display: inline-block;
-      width: 40%;
-      vertical-align: middle;
-      margin-left: 10px; }
+  .component__workshops {
+    width: 100%;
+    max-height: 380px;
+    overflow: scroll; }
+    .component__workshops__item {
+      padding: 20px 15px; }
+      .component__workshops__item img {
+        width: 40px;
+        height: 40px;
+        border-radius: 360px;
+        display: inline-block;
+        vertical-align: middle; }
+      .component__workshops__item__info {
+        display: inline-block;
+        width: 40%;
+        vertical-align: middle;
+        margin-left: 10px; }
+
+.component-container {
+  margin: 20px auto 0px auto; }
+  .component-container__one-third {
+    position: relative;
+    width: 28%;
+    display: inline-block; }
+    .component-container__one-third div {
+      vertical-align: top; }
+  .component-container__two-third {
+    position: relative;
+    width: 68%;
+    display: inline-block;
+    vertical-align: top; }
+    .component-container__two-third div {
+      vertical-align: top; }
+  .component-container__left {
+    float: left; }
+  .component-container__right {
+    float: right; }
 
 @media screen and (max-width: 1030px) {
   .component__left h4 {
