--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,3 +2,5 @@
 <title><%= title %></title>
 <link rel='stylesheet' href='/stylesheets/css/main.css'/>
 <script src="/js/vue.js"></script>
+<link href="stylesheets/css/timetablejs.css" type="text/css" rel="stylesheet"/>
+<script src="js/timetable.min.js"></script>
