--- a/views/partials/timeline-component.ejs
+++ b/views/partials/timeline-component.ejs
@@ -1,4 +1,4 @@
-<div class="component component__workshops component__two-third float__right">
+<div class="component component__two-third float__right">
     <div class="component__header">
         <h3>Timeline</h3>
     </div>
