--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
 
         <div id="workshops" class="component-container component-container__one-third">
           <workshops id="workshops">
-            <div v-for="item in workshops">
+            <div v-for="item in events">
               <workshop-item :title="item.title" :room="item.location" :image="item.img" :time="item.time"></workshop-item>
             </div>
           </workshops>
