Created login endpoint & page

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -217,5 +217,22 @@ hr{
   background-repeat: $repeat;
 }
 
+body{
+  height: 100%;
+  display: flex;
+}
 
+.bar-left, .page{
+  display: inline-block;
+  vertical-align: top;
+}
+
+.page{
+  width: 100%;
+}
+
+#main{
+  width: 90%;
+  margin: auto;
+}
 
