--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -164,16 +164,20 @@ body {
   vertical-align: top; }
 
 .page {
-  width: 100%; }
+  width: 100%;
+  overflow: auto;
+  padding-bottom: 20px; }
 
 #main {
   width: 90%;
-  margin: auto; }
+  margin: auto;
+  position: relative; }
 
 /* MODULES */
 .nav {
   height: 70px;
   overflow: hidden;
+  width: 100%;
   border-bottom: 2px solid #E2E2E2; }
   .nav__container {
     width: 50%;
@@ -186,6 +190,9 @@ body {
       width: 40px;
       height: 40px;
       margin-right: 20px; }
+
+nav {
+  width: 100%; }
 
 .side-bar {
   width: 80px;
@@ -317,6 +324,56 @@ body {
   .component__left h4 {
     display: none !important; } }
 /* PAGE SPECIFIC */
+.floating-box {
+  border: 1px solid #E2E2E2;
+  box-shadow: #E2E2E2 0px 2px 4px;
+  background-color: #F5F5F5; }
+  .floating-box__small {
+    width: 40%;
+    margin: auto; }
+  .floating-box__content {
+    text-align: center;
+    box-sizing: border-box;
+    padding: 30px; }
+    .floating-box__content img {
+      width: 50%;
+      text-align: center; }
+  .floating-box__login__icon {
+    background-color: #15aafe;
+    width: 80px;
+    height: 80px;
+    border-radius: 360px;
+    margin: 15px auto; }
+  .floating-box__login h3 {
+    padding: 10px; }
+  .floating-box__login form input {
+    width: 80%;
+    display: block;
+    margin: 5px auto; }
+  .floating-box__login form input[type="text"], .floating-box__login form input[type="password"] {
+    -webkit-appearance: none;
+    padding: 10px 10px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    box-sizing: border-box; }
+  .floating-box__login form input[type="submit"] {
+    width: 30%;
+    -webkit-appearance: none;
+    outline: none;
+    padding: 15px 0px;
+    border: none;
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    background-color: #15aafe;
+    color: white;
+    text-transform: uppercase;
+    margin-top: 20px;
+    cursor: pointer; }
+
 /* Main App CSS */
 
 /*# sourceMappingURL=main.css.map */
