--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -1,6 +1,7 @@
 .nav{
   height: 70px;
   overflow: hidden;
+  width: 100%;
   &__container{
     width: 50%;
     margin: auto;
@@ -17,4 +18,8 @@
 
   }
   border-bottom: 2px solid $greyBorder;
+}
+
+nav{
+  width: 100%;
 }
