Completed login form

--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -19,7 +19,7 @@
             <img class="bothC__relative" src="/img/icons/challenges.svg"/>
         </div>
     </a>
-    <a href="/">
+    <a href="/login">
         <div class="side-bar__item" <% if(pageName === 'login') { %> class="side-bar__active" <% } %>>
             <img class="side-bar__item__lock bothC__relative" src="/img/icons/login.svg"/>
         </div>
