--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -7,11 +7,12 @@
 <body>
 
 <% include ../partials/side-bar %>
-<nav>
-    <% include ../partials/nav %>
-</nav>
 
 <section class="page">
+
+    <nav>
+        <% include ../partials/nav %>
+    </nav>
 
     <section id="main">
 
@@ -22,8 +23,8 @@
                 </div>
                 <h3>Admin Login</h3>
                 <form action="/login/submit">
-                    <input type="text" placeholder="Username"/>
-                    <input type="password" placeholder="Password"/>
+                    <input type="text" name="username" placeholder="Username"/>
+                    <input type="password" name="password" placeholder="Password"/>
                     <input type="submit" placeholder="Login"/>
                 </form>
             </div>
