google link changed to local open sans

--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -1,5 +1,5 @@
 /* Import Lato Font */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
+@import "fonts.css";
 /* Font Variable */
 /* Colour Setup */
 html {
