--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -22,9 +22,9 @@
                     <img class="vertC__relative" src="/img/icons/login.svg"/>
                 </div>
                 <h3>Admin Login</h3>
-                <form action="/login/submit">
-                    <input type="text" name="username" placeholder="Username"/>
-                    <input type="password" name="password" placeholder="Password"/>
+                <form action="/login" method="post">
+                    <input type="text" name="user" placeholder="Username"/>
+                    <input type="password" name="pass" placeholder="Password"/>
                     <input type="submit" placeholder="Login"/>
                 </form>
             </div>
