--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <% include ../partials/headers/login-head %>
+    <% include ../partials/headers/admin-dash %>
 
 </head>
 <body>
@@ -16,7 +16,9 @@
 
     <section id="main">
 
-        <h1>Welcome <%= name %></h1>
+
+        <% include ../partials/profile-info %>
+
 
     </section>
 </section>
