--- a/views/partials/profile-info.ejs
+++ b/views/partials/profile-info.ejs
@@ -2,5 +2,5 @@
     <%if (picture == null) { %>
         <img src="/img/bullhacks-head.png"/>
     <% } %>
-    <h1>Welcome, <%= name %></h1>
+    <h1>Welcome, <%= name %>!</h1>
 </div>
