--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -16,8 +16,52 @@
 
     <section id="main">
 
+        <section id="profile-info">
+            <% include ../partials/profile-info %>
+            <h2>Welcome to the hackathon organiser tool!</h2>
+        </section>
 
-        <% include ../partials/profile-info %>
+        <section id="admin-controls">
+            <div class="admin-controls">
+                <a href="#">
+                    <div class="floating-box admin-controls__item">
+                        <img src="/img/icons/add-event.svg"/>
+                        <h3>Add event</h3>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="floating-box admin-controls__item">
+                        <img src="/img/icons/send-text.svg"/>
+                        <h3>Send text</h3>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="floating-box admin-controls__item">
+                        <img src="/img/icons/announcement.svg"/>
+                        <h3>Announcement</h3>
+                    </div>
+                </a>
+            </div>
+
+            <div class="upload-event floating-box">
+                <div class="upload-event__left">
+                    <img class="bothC__relative" src="img/icons/upload.svg"/>
+                </div>
+                <div class="upload-event__right">
+                    <div class="vertC__relative">
+                        <h3>Upload event</h3>
+                        <p>Upload a CSV to instantly load all hackathon attendees to this system. Once done, you can send
+                            texts out to any participant that has registered a mobile number.
+                        </p>
+                        <button class="__blue">Choose file</button>
+                        <button class="__blue">Send</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
 
 
     </section>
