--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -29,7 +29,7 @@
                         <h3>Add event</h3>
                     </div>
                 </a>
-                <a href="#">
+                <a href="/admin/send-text">
                     <div class="floating-box admin-controls__item">
                         <img src="/img/icons/send-text.svg"/>
                         <h3>Send text</h3>
@@ -67,7 +67,7 @@
     </section>
 </section>
 
-<% include ../partials/footer %>
+<!--<% include ../partials/footer %>-->
 
 </body>
 </html>
