--- a/scss/modules/_floating-box.scss
+++ b/scss/modules/_floating-box.scss
@@ -6,6 +6,57 @@
     width: 40%;
     margin: auto;
   }
+  &__large{
+    width: 60%;
+    margin: auto;
+
+  }
+  &__send-text{
+    &__content{
+      text-align: center;
+      p{
+        font-size: 13px;
+      }
+      &__icon{
+        img{
+          width: 60px;
+          height: 60px;
+        }
+        height: 70px;
+        margin-top: 40px;
+      }
+      form{
+        textarea, input{
+          display: block;
+          margin: auto;
+        }
+        textarea{
+          margin: 30px auto;
+          min-height: 200px;
+          width: 80%;
+          max-width: 80%;
+          max-height: 300px;
+        }
+        input[type="checkbox"], p{
+          display: inline-block;
+          font-size: 16px;
+          vertical-align: middle;
+        }
+        input[type="checkbox"]{
+          margin-right: 10px;
+        }
+        .button{
+          margin: 30px auto;
+        }
+        .confirm-text.red{
+          color: red;
+        }
+      }
+      p:nth-last-child(1){
+        padding: 0px 10% 35px 10%;
+      }
+    }
+  }
   &__content{
     text-align: center;
     img{
@@ -15,6 +66,17 @@
     }
     box-sizing: border-box;
     padding: 30px;
+  }
+  input[type="text"], textarea{
+    -webkit-appearance: none;
+    padding: 10px 10px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-family: $font;
+    font-weight: 300;
+    box-sizing: border-box;
   }
   &__login{
     &__icon{
