--- a/views/partials/headers/admin-dash.ejs
+++ b/views/partials/headers/admin-dash.ejs
@@ -1,4 +1,4 @@
 <meta charset="UTF-8"/>
 <title><%= title %></title>
 <link rel='stylesheet' href='/stylesheets/css/admin-dash.css'/>
-<script src="/js/vue.js"></script>
+<!--<script src="/js/vue.js"></script>-->
